Modelo Site Login

--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -1,8 +1,60 @@
-<html>
+<!DOCTYPE html>
+    <html lang="pt-br">
+
  <head>
+     <meta charset="UTF-8">
+
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <link rel="stylesheet" href="PaginaInicialstyle.css">
+
  <title> Pagina Inicial do Site da PI </title>
+
  </head>
  
-Testando</br>
-Testando 1 2 3
+<body>
+
+    <div id="Login">
+
+        <form class="tituloLogin">
+
+            <div class="tituloLogin-header">
+
+                <h2>Login</h2>
+
+            </div>
+
+            <div class="ConteudoUsuario">
+
+                <div class="ConteudoUsuarioCaixa">
+
+                    <label for="usuario">Usuário</label>
+
+                    <input type="text" id="usuario" autocomplete="off">
+                </div>
+
+            <div class="ConteudoSenha">
+
+                    <label for="password">Senha</label>
+
+                    <input type="password" id="password" autocomplete="off">
+                </div>
+
+            <div class="Rodape">
+
+                    <input type="submit" value="login" class="submit">
+
+                    <a href="#" class="recuperar_senha">Esqueceu a senha?</a>
+
+            </div> 
+
+        </div>
+        </form>
+    </div>
+
+</body>
+
 </html>
+
